--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script src="index.js" charset="utf-8"></script>
 
 <footer>
-  Made by gCoder.
+    Made with ❤️by gCoder.
 </footer>
 </body>
 </html>
